--- a/RestWithASP-NET5/01_RestWithASP-NET5ViaVS/RestWithASP-NET5/RestWithASP-NET5/RestWithASP-NET5.csproj
+++ b/RestWithASP-NET5/01_RestWithASP-NET5ViaVS/RestWithASP-NET5/RestWithASP-NET5/RestWithASP-NET5.csproj
@@ -5,4 +5,13 @@
     <RootNamespace>RestWithASP_NET5</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Script\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.0" />
+  </ItemGroup>
+
 </Project>
