--- a/RestWithASP-NET5/01_RestWithASP-NET5ViaVS/RestWithASP-NET5/RestWithASP-NET5/RestWithASP-NET5.csproj
+++ b/RestWithASP-NET5/01_RestWithASP-NET5ViaVS/RestWithASP-NET5/RestWithASP-NET5/RestWithASP-NET5.csproj
@@ -6,12 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Script\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Evolve" Version="2.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.0" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="2.1.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
   </ItemGroup>
 
 </Project>
